--- a/cal-front/package.json
+++ b/cal-front/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.0",
+    "ng2-charts": "^5.0.3",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
